# knowledge

./: .env.example  .gitattributes  .gitignore  BACKUP_RESTORE_GUIDE.md  CLAUDE.md  COMMUNITY_DETECTION_SUMMARY.md  COMMUNITY_SEARCH_TEST_RESULTS.md  DESKTOP_INTEGRATION_PLAN.md  DESKTOP_PROTOTYPE_ANALYSIS.md  DOCKER_DEPLOYMENT.md  ENHANCED_MCP_IMPLEMENTATION.md  FINAL_STATUS_REPORT.md  GRAPH_RAG_REQUIREMENTS.md  HIERARCHICAL_IMPLEMENTATION_SUMMARY.md  INCOMPLETE_DOCUMENTS_FIX_SUMMARY.md  MCP_DEPLOYMENT.md  MCP_NEO4J_INTEGRATION.md  MCP_SERVER_FIX.md  Makefile  PERFORMANCE_REQUIREMENTS.md  README.md  REINGEST_COMPLETION_SUMMARY.md  ROADMAP.md  ROADMAP_DETAILED.md  SYSTEM_ARCHITECTURE.md  TEST_SCENARIOS.md  build_entity_relationships.py  cascading_filter_api.py  community-implementation-analysis.md  demo_community_search.py  deployment_summary.md  diagnose_search_performance.py  docker-compose.yml  document_summary_enhancement.py  final_success_rate_test.py  full_mvp_inventory_docker.json  get_success_rates_simple.py  hierarchical_migration.py  hierarchical_ontology_design.py  hierarchical_search.py  (+21 more)
mcp_server/: MCP_README.md  NEO4J_PROXY_README.md  README.md  README_ENHANCED.md  __main__.py  check_neo4j_data.py  claude_desktop_config.json  claude_desktop_config_enhanced.json  claude_desktop_config_fastmcp.json  claude_desktop_config_fixed.json  claude_desktop_config_no_neo4j.json  claude_desktop_config_ready.json  claude_desktop_config_updated.json  claude_desktop_neo4j_proxy.json  enhanced_server.py  enhanced_server_final.py  enhanced_server_fixed.py  fixed_server.py  (+28 more)
(+102 files in other folders)
