[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "knowledge-graph-mcp"
version = "1.0.0"
description = "MCP server for Knowledge Graph System with GraphRAG capabilities"
authors = [
    {name = "Knowledge Graph Team"},
]
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
dependencies = [
    "mcp>=0.1.0",
    "fastapi>=0.100.0",
    "pydantic>=2.0.0",
    "neo4j>=5.0.0",
    "numpy>=1.24.0",
    "scikit-learn>=1.3.0",
    "sentence-transformers>=2.2.0",
    "torch>=2.0.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
knowledge-graph-mcp = "mcp_server.server:main"
knowledge-graph-mcp-simple = "mcp_server.simple_server:main"
knowledge-graph-mcp-enhanced = "mcp_server.enhanced_server:main"